ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host-routing
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - host: abcd.chetan.nifetency.com
    http:
      paths:
      - backend:
          service:
            name: service-game-nife
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: xyza.chetan.nifetency.com
    http:
      paths:
      - backend:
          service:
            name: service-nginx
            port:
              number: 80
        path: /
        pathType: Prefix
